[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player/Shoot.gd" type="Script" id=1]
[ext_resource path="res://assets/player/sprites/shot-1.png" type="Texture" id=2]
[ext_resource path="res://assets/player/sounds/Shoot.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/player/sprites/shot-2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.5, 6 )

[node name="Shoot" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 2 )

[node name="SoundShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -3, -6, 5, 12 )

[connection signal="area_entered" from="." to="." method="_on_Shoot_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
